--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-1.8
-
+1.8 LTS
 -->
 <!--下面是头头区开始-->
 <head>
@@ -23,7 +22,7 @@
 <!--头头区结束-->
 
 <!--下面是身体区开始-->
-<body style="background-image: url(https://w.wallhaven.cc/full/k7/wallhaven-k7q9m7.png);background-size:cover;background-repeat:no-repeat;">
+<body style="background-image: url(https://w.wallhaven.cc/full/qz/wallhaven-qzdqvr.jpg);background-size:cover;background-repeat:no-repeat;">
 
 <!--下面是div遮罩层开始,id=1-->
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
