--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <br>
 <h1 style="text-align: center;color: white;">友情链接</h1>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
-<div style="text-align: center;"><a style="color: yellowgreen;" href="null">友情链接:ATIBY Studio Group</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:ATIBY Studio Group</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: yellowgreen;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
 <div style="text-align: center;"><p style="color: yellowgreen;">中国授时中心ntp服务:ntp.ntsc.ac.cn</p></div>
 
