--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="./ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
 	<br>
 	<br>
 <!--one区结束-->
@@ -51,13 +51,13 @@
 	<h1 style="text-align: center;color: white;">服务项列表</h1>
 
 
-	<div style="text-align: left;color: yellow;"><p>socks服务(代理), <a style="color: yellowgreen;" href="">端口:5554</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>http服务(代理), <a style="color: yellowgreen;" href="">端口:5555</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>VPN服务(L2TP), <a style="color: yellowgreen;" href="">端口:5556</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="">链接</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="./ARKFUTURE/calendar.ics">链接</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>临时资源库, <a style="color: yellowgreen;" href="./res">链接</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
+	<div style="text-align: left;color: red;"><p>socks服务(代理), <a style="color: yellowgreen;" href="">端口:5554</a></p></div><br>
+	<div style="text-align: left;color: red;"><p>http服务(代理), <a style="color: yellowgreen;" href="">端口:5555</a></p></div><br>
+	<div style="text-align: left;color: red;"><p>VPN服务(L2TP), <a style="color: yellowgreen;" href="">端口:5556</a></p></div><br>
+	<div style="text-align: left;color: red"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>临时资源库, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/res">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:6667/">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
 
 <br>
 <!--two区结束-->
