--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div id=2 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是two区开始-->
 <br>
-	<h1 style="text-align: center;color: white;">服务项列表</h1>
+	<h1 style="text-align: center;color: white;">服务项列表<p style="font-size: 5;">红色为暂停工作</p></h1>
 
 
 	<div style="text-align: left;color: red;"><p>socks服务(代理), <a style="color: yellowgreen;" href="">端口:5554</a></p></div><br>
