--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div style="text-align: left;color: red;"><p>socks服务(代理), <a style="color: yellowgreen;" href="">端口:5554</a></p></div><br>
 	<div style="text-align: left;color: red;"><p>http服务(代理), <a style="color: yellowgreen;" href="">端口:5555</a></p></div><br>
 	<div style="text-align: left;color: red;"><p>VPN服务(L2TP), <a style="color: yellowgreen;" href="">端口:5556</a></p></div><br>
-	<div style="text-align: left;color: yellow"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1315/stream">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>临时资源库, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/res">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:6667/">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
