--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 <div id=4 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是其他区开始-->
 <br>
-<h1 style="text-align: center;color: white;">友情链接</h1>
+<h1 style="text-align: center;color: white;">友情链接|感谢名单</h1>
+<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/tha.html">感谢名单</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:ATIBY Studio Group</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: yellowgreen;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
