--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
 	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>临时资源库, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/res">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:6667/">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
+	<br>
+	<h1 style="text-align: center;color: white;">其他项目</h1>
+
+
+	<div style="text-align: left;color: pink;"><p>qq飞车手游车队-骇客军团(QQ区)</p><a style="color: yellowgreen;">链接</a></div><br>
+	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;">链接</a></div><br>
+
+
+
 
 <br>
 <!--two区结束-->
