--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 	<h1 style="text-align: center;color: white;">其他项目</h1>
 
 
-	<div style="text-align: left;color: pink;"><p>qq飞车手游车队-骇客军团(QQ区)</p><a style="color: yellowgreen;">链接</a></div><br>
-	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;">链接</a></div><br>
+	<div style="text-align: left;color: pink;"><p>qq飞车手游车队-骇客军团(QQ区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/qqfc.html">链接</a></div><br>
+	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/smzh.html">链接</a></div><br>
 
 
 
