--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:6667/">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">其他项目</h1>
-
-
 	<div style="text-align: left;color: pink;"><p>qq飞车手游车队-骇客军团(QQ区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/qqfc.html">链接</a></div><br>
 	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/smzh.html">链接</a></div><br>
-
-
-
+	<br>
+	<h1 style="text-align: center;color: white;">社交媒体</h1>
+	<div style="text-align: center;color: pink;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
+	<div style="text-align: center;color: pink;">我们在很多社交平台均注册有账号,有中文标识的都是我们,我们发的贴子很少,请认准我们</div><br>
+	<div style="text-align: center;color: pink;">我们是工作室,团队,社区,非盈利机构,非政府组织,无任何商业项目</div><br>
 
 <br>
 <!--two区结束-->
