--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/smzh.html">链接</a></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
-	<div style="text-align: center;color: pink;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
-	<div style="text-align: center;color: pink;">我们在很多社交平台均注册有账号,有中文标识的都是我们</div><br>
-	<div style="text-align: center;color: pink;">我们是工作室,团队,社区,非盈利机构,非政府组织;工作室并非赚钱的工作室,其更多的是解决成员的技术问题,交流学习工作的社区</div><br>
+	<div style="text-align: center;color: fuchsia;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
+	<div style="text-align: center;color: fuchsia;">我们在很多社交平台均注册有账号,有中文标识的都是我们</div><br>
+	<div style="text-align: center;color: fuchsia;">我们是工作室,团队,社区,非盈利机构,非政府组织;工作室并非赚钱的工作室,其更多的是解决成员的技术问题,交流学习工作的社区</div><br>
 
 <br>
 <!--two区结束-->
