--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="keywords" content="ARKFUTURE">
 <meta name="description" content="ARKFUTURE 引导页|ARKFUTURE 镜像站">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="icon" href="./favicon.ico">
+<link rel="icon" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/favicon.ico">
 <link rel="stylesheet" href="./css/a.css">
 <style>CSS</style>
 <script src="./js/a.js">js</script>
@@ -33,7 +33,7 @@
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室邮箱使用公示</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
 	<br>
 	<br>
 <!--one区结束-->
