--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/mail.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/zysm.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
 	<br>
 	<br>
 <!--one区结束-->
