--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是one区开始-->
 	<br>
-	<div style="text-align: center;color: white;"><p>♥</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室规章制度</a></div>
@@ -137,6 +136,9 @@
 <!--上面是div遮罩层结束,id=5-->
 
 
+
+
+<!--框架顶部-->
 <br>
 <br>
 <br>
@@ -154,9 +156,7 @@
 <!--1结束-->
 </div>
 <!--上面是div遮罩层结束+框架结束,id=6-->
-
-
-
+<!--框架底部-->
 
 
 
@@ -172,7 +172,9 @@
 <footer style="text-align: center;background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <br>
 <br>
-<p style="color: white;">ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP<br>方舟未来|方舟未来工作室|方舟未来集团<br> 2015 - ∞ </p>
+<div><p style="text-align: center;color: white;">ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP</p></div>
+<div><p style="text-align: center;color: white;">方舟未来|方舟未来工作室|方舟未来集团</p></div>
+<div><p style="text-align: center;color: white;">2015 - ∞ </p></div>
 <br>
 </footer>
 <!--jio注区结束-->
