--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 	<br>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室公约</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室公约</a></div>
 	<br>
-	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/zysm.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
+	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/zysm.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
 	<br>
 	<br>
 <!--one区结束-->
@@ -53,14 +53,14 @@
 	<div style="text-align: left;color: red;"><p>socks服务(代理), <a style="color: yellowgreen;" href="">端口:5554</a></p></div><br>
 	<div style="text-align: left;color: red;"><p>http服务(代理), <a style="color: yellowgreen;" href="">端口:5555</a></p></div><br>
 	<div style="text-align: left;color: red;"><p>VPN服务(L2TP), <a style="color: yellowgreen;" href="">端口:5556</a></p></div><br>
-	<div style="text-align: left;color: yellow"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1315/stream">链接</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/calendar.ics">链接</a></p></div><br>
+	<div style="text-align: left;color: red"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="http://arkfuture.cn/stream">链接</a></p></div><br>
+	<div style="text-align: left;color: yellow;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/calendar.ics">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>临时资源库, <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/res">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:6667/">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">其他项目</h1>
-	<div style="text-align: left;color: pink;"><p>qq飞车手游车队-骇客军团(QQ区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/qqfc.html">链接</a></div><br>
-	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/smzh.html">链接</a></div><br>
+	<div style="text-align: left;color: pink;"><p>qq飞车手游车队-骇客军团(QQ区)</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/qqfc.html">链接</a></div><br>
+	<div style="text-align: left;color: pink;"><p>使命召唤手游战队-骇客军团(微信区)</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/smzh.html">链接</a></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
 	<div style="text-align: center;color: fuchsia;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
@@ -98,7 +98,7 @@
 <!--下面是其他区开始-->
 <br>
 <h1 style="text-align: center;color: white;">友情链接|感谢名单</h1>
-<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/tha.html">感谢名单</a></div>
+<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/tha.html">感谢名单</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:ATIBY</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: yellowgreen;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
