--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-1.8 LTS
+框架2.0内容1.9 LTS
 -->
 <!--下面是头头区开始-->
 <head>
@@ -65,7 +65,7 @@
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
 	<div style="text-align: center;color: fuchsia;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
 	<div style="text-align: center;color: fuchsia;">我们在很多社交平台均注册有账号,有中文标识的都是我们</div><br>
-	<div style="text-align: center;color: fuchsia;">我们是工作室,团队,社区,非盈利机构,非政府组织;工作室并非赚钱的工作室,其更多的是解决成员的技术问题,交流学习工作的社区</div><br>
+	<div style="text-align: center;color: fuchsia;">我们是工作室,团队,社区,非盈利机构,非政府组织;工作室并非赚钱的工作室,是一个交流技术的社区</div><br>
 
 <br>
 <!--two区结束-->
