--- a/ARKFUTURE/zysm.html
+++ b/ARKFUTURE/zysm.html
@@ -30,7 +30,7 @@
 <!--1开始-->
 <br>
 <h1 style="text-align: center;color: white;">ARKFUTURE方舟未来工作室使用资源说明</h1>
-<div style="text-align: center;"><p style="color: white;">1.邮箱资源:我们使用的邮箱以@arkfuture.cn结尾;其中arkfuture@arkfuture.cn为管理运营人员的邮箱</p></div>
+<div style="text-align: center;"><p style="color: white;">1.邮箱资源:我们使用的邮箱以@arkfuture.cn结尾;其中admin@arkfuture.cn为管理运营人员的邮箱</p></div>
 <div style="text-align: center;"><p style="color: white;">2.图片资源:我们所使用的图片部分来自互联网,部分来自工作室管理运营人员自费购买授权使用</p></div>
 <div style="text-align: center;"><p style="color: white;">3.关于文件资源:文件资源均为成员分享,有互联网作品,成员自己作品等</p></div>
 <div style="text-align: center;"><p style="color: white;">4.版权:互联网的图片和作品我们均为学习使用,24小时内删除;成员作品是由成员授权给工作室集体;管理运营人员自费资源均为卖断或者授权资源</p></div>
