--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="keywords" content="ARKFUTURE">
 <meta name="description" content="ARKFUTURE 引导页|ARKFUTURE 镜像站">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<link rel="icon" href="http://arkfuture.tpddns.cn:1314/ARKFUTURE/favicon.ico">
+<link rel="icon" href="http://arkfuture.cn/ARKFUTURE/favicon.ico">
 <link rel="stylesheet" href="./css/a.css">
 <style>CSS</style>
 <script src="./js/a.js">js</script>
