--- a/ARKFUTURE/game.html
+++ b/ARKFUTURE/game.html
@@ -29,6 +29,9 @@
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--1开始-->
 <br>
+<h1 style="text-align: center;color: white;">骇客军团(QQ飞车手游QQ区车队)</h1>
+<div style="text-align: center;"><p style="color: white;">车队于2021年创建,至今由56人</p></div>
+<br>
 <h1 style="text-align: center;color: white;">骇客军团(使命召唤手游微信区战队)</h1>
 <div style="text-align: center;"><p style="color: white;">战队于2023年创建</p></div>
 <br>
