--- a/ARKFUTURE/other.html
+++ b/ARKFUTURE/other.html
@@ -29,8 +29,8 @@
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--1开始-->
 <br>
-<h1 style="text-align: center;color: white;">骇客军团(QQ飞车手游QQ区车队)</h1>
-<div style="text-align: center;"><p style="color: white;">车队于2021年创建,至今由56人</p></div>
+<h1 style="text-align: center;color: white;"></h1>
+<div style="text-align: center;"><p style="color: white;"></p></div>
 <br>
 <!--1结束-->
 </div>
