--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div style="text-align: left;color: red"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="http://arkfuture.cn/stream">链接</a></p></div><br>
 	<div style="text-align: left;color: red;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/calendar.ics">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>网盘, <a style="color: yellowgreen;" href="http://pan.hwkj.top">链接</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="ircs://ark.arkfuture.cn:6667/#ark">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
+	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="irc://ark.arkfuture.cn:6667/#ark">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">其他项目</h1>
 	<div style="text-align: left;color: pink;"><p>游戏战队</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/game.html">链接</a></div><br>
