--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是one区开始-->
 	<br>
+	<div style="text-align: center;color: white;"><p>△</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
 	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室公约</a></div>
