--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
 	<div style="text-align: center;color: fuchsia;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
 	<div style="text-align: center;color: fuchsia;">我们在很多社交平台均注册有账号,有中文标识的都是我们</div><br>
-	<div style="text-align: center;color: fuchsia;">我们是工作室,团队,社区,非盈利机构,非政府组织,是一个交流技术的社区</div><br>
+	<div style="text-align: center;color: fuchsia;">我们是工作室,团队,非盈利机构,非政府组织,更是一个交流技术的社区</div><br>
 
 <br>
 <!--two区结束-->
