--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--头头区结束-->
 
 <!--下面是身体区开始-->
-<body style="background-image: url(https://w.wallhaven.cc/full/qz/wallhaven-qzdqvr.jpg);background-size:cover;background-repeat:no-repeat;">
+<body style="background-image: url(https://w.wallhaven.cc/full/ex/wallhaven-ex9gwo.png);background-size:cover;background-repeat:no-repeat;">
 
 <!--下面是div遮罩层开始,id=1-->
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
@@ -98,10 +98,11 @@
 <!--下面是其他区开始-->
 <br>
 <h1 style="text-align: center;color: white;">友情链接|感谢名单</h1>
-<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/tha.html">感谢名单</a></div>
-<div style="text-align: center;"><a style="color: yellowgreen;" href="https://hwkj.top">友情链接:I'm 西杰</a></div>
-<div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:ATIBY</a></div>
-<div style="text-align: center;"><a style="color: yellowgreen;" href="https://b1008611.github.io/my_web/">友情链接:蒙奇D·萧白</a><a style="color: yellowgreen;" href="https://haokawx.lot-ml.com/Product/Index/6433">蒙奇D·萧白商城</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href=http://arkfuture.cn/ARKFUTURE/tha.html"">感谢每一位成员的支持</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:I'm 西杰</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="">TIBY PASS</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="">TIBY PASS</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:蒙奇D·萧白</a></div>
 <div style="text-align: center;"><p style="color: yellowgreen;">中国授时中心ntp服务:ntp.ntsc.ac.cn</p></div>
 
 <div style="text-align: center;">
