--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <!--下面是其他区开始-->
 <br>
 <h1 style="text-align: center;color: white;">友情链接|感谢名单</h1>
-<div style="text-align: center;"><a style="color: yellowgreen;" href=http://arkfuture.cn/ARKFUTURE/tha.html"">感谢每一位成员的支持</a></div>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/tha.html">感谢每一位成员的支持</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:I'm 西杰</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="">TIBY PASS</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:蒙奇D·萧白</a></div>
