--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--头头区结束-->
 
 <!--下面是身体区开始-->
-<body style="background-image: url(https://w.wallhaven.cc/full/ex/wallhaven-ex9gwo.png);background-size:cover;background-repeat:no-repeat;">
+<body style="background-image: url(https://w.wallhaven.cc/full/ex/wallhaven-ex9gwo.png);background-size:cover;background-repeat:repeat;">
 
 <!--下面是div遮罩层开始,id=1-->
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
