--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
 <div id=3 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是其他区开始-->
 <br>
-<h1 style="text-align: center;color: white;">加入我们</h1>
-<div style="text-align: center;"><a style="color: paleturquoise;" href="https://h5.dingtalk.com/circle/healthCheckin.html?corpId=dingf8d0d001aa01235b0a9403ecaabf00b0&46e1191d-6b43-4c=c5e1b836-8148-40&cbdbhh=qwertyuiop">加入钉钉</a></div>
-<div style="text-align: center;"><a style="color: paleturquoise;" href="https://work.weixin.qq.com/join/tfhr3iVoLv0ZjkePHUPZfQ/hb_share_app_member_join?&is=0,175&ic=0&type=fast_join_mode">加入企业微信(企业邮箱)</a></div>
-<div style="text-align: center;"><a style="color: paleturquoise;" href="https://wpsplus.com/invite?invitekey=f9575b50c4722d96&code=473695511225729024">加入WPS企业</a></div>
+<h1 style="text-align: center;color: white;">公告/活动/新闻</h1>
+<div style="text-align: center;"><a style="color: yellowgreen;" href="">更新ing</a></div>
 <br>
 <!--其他区结束-->
 </div>
