--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <!--下面是其他区开始-->
 <br>
 <h1 style="text-align: center;color: white;">公告/活动/新闻</h1>
-<div style="text-align: center;"><a style="color: yellowgreen;" href="">更新ing</a></div>
+<div style="text-align: center;"><a style="color: paleturquoise;" href="">更新ing</a></div>
 <br>
 <!--其他区结束-->
 </div>
