--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 	<div style="text-align: left;color: red"><p>网络电台(ICECAST), <a style="color: yellowgreen;" href="http://arkfuture.cn/stream">链接</a></p></div><br>
 	<div style="text-align: left;color: red;"><p>日历(ICS)服务, <a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/calendar.ics">链接</a></p></div><br>
 	<div style="text-align: left;color: yellow;"><p>网盘, <a style="color: yellowgreen;" href="http://pan.hwkj.top">链接</a></p></div><br>
-	<div style="text-align: left;color: yellow;"><p>IRC服务,  <a style="color: yellowgreen;" href="irc://ark.arkfuture.cn:6667/#ark">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
+	<div style="text-align: left;color: red;"><p>IRC服务,  <a style="color: yellowgreen;" href="irc://host:port/#ark">端口:默认不加密端口</a>,进入频道:#ark,可文件传输</p></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">其他项目</h1>
 	<div style="text-align: left;color: pink;"><p>游戏战队</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/game.html">链接</a></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
-	<div style="text-align: center;color: fuchsia;">我们在各个社交平台均注册有账号,中国国内可以搜索ARKFUTURE、ARKFUTURESTUDIO,国外可以搜索ARKFUTURE(部分是)、ARKFUTURESTUDIO(这个多)、ARKFUTURE 方舟未来,请大家擦亮眼睛,以免被骗</div><br>
-	<div style="text-align: center;color: fuchsia;">我们在很多社交平台均注册有账号,有中文标识的都是我们</div><br>
-	<div style="text-align: center;color: fuchsia;">我们是工作室,团队,非盈利机构,非政府组织,更是一个交流技术的社区</div><br>
+	<div style="text-align: center;color: fuchsia;"><p>可以查找以下名称 :<br>ARKFUTURE<br>ARKFUTURELAB<br>ARKFUTURESTUDIO<br>ARKFUTUREGROUP</p></div><br>
+	<div style="text-align: center;color: fuchsia;"><p>有中文或英文的特别说明的,均是我们,反而不是</p></div><br>
+
 
 <br>
 <!--two区结束-->
