--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<div style="text-align: left;color: pink;"><p>游戏战队</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/game.html">链接</a></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
-	<div style="text-align: center;color: fuchsia;"><p>可以查找以下名称 :<br>ARKFUTURE<br>ARKFUTURELAB<br>ARKFUTURESTUDIO<br>ARKFUTUREGROUP</p></div><br>
+	<div style="text-align: center;color: fuchsia;"><p>可以查找以下名称 :<br>ARKFUTURE<br>ARKFUTURELAB<br>ARKFUTUREGROUP<br>ARKFUTURESTUDIO</p></div><br>
 	<div style="text-align: center;color: fuchsia;"><p>有中文或英文的特别说明的,均是我们,反而不是</p></div><br>
 
 
