--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<br>
 	<h1 style="text-align: center;color: white;">其他项目</h1>
 	<div style="text-align: left;color: pink;"><p>游戏战队</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/game.html">链接</a></div><br>
+	<div style="text-align: left;color: pink;"><p>方舟未来实验室</p><a style="color: yellowgreen;" href="">链接</a></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
 	<div style="text-align: center;color: fuchsia;"><p>可以查找以下名称 :<br>ARKFUTURE<br>ARKFUTURELAB<br>ARKFUTUREGROUP<br>ARKFUTURESTUDIO</p></div><br>
