--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <div><p style="text-align: center;color: white;">ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP</p></div>
 <div><p style="text-align: center;color: white;">方舟未来|方舟未来工作室|方舟未来集团</p></div>
 <div><p style="text-align: center;color: white;">2015 - ∞ </p></div>
-<div><p style="text-align: center;color: white;">▽</p></div>
+<div><p style="text-align: center;color: white;"></p></div>
 <br>
 </footer>
 <!--jio注区结束-->
