--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 您好,欢迎您查看ARKFUTURE方舟未来工作室网站源代码,这里是特别说明,我工作室没有固定域名,您所看到的页面均是镜像站,具体更改会随着网页的更新而更新,
 我们是自由软件的支持与研发者,所以我们工作室是非盈利非政府的,具体可以看我们的规章制度
 很高兴您可以了解我们,并访问我们的网站,您的每一次访问,都是给予我们最大的支持,再次感谢,本站不统计您的浏览信息
-框架2.0内容2.0 LTS
+框架2.0 LTS
 -->
 <!--下面是头头区开始-->
 <head>
@@ -28,9 +28,8 @@
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是one区开始-->
 	<br>
-	<div style="text-align: center;color: white;"><p>△</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
-	<div style="text-align: center;color: white;"><p>方舟未来工作室</p></div>
+	<div style="text-align: center;color: white;"><p><br></p></div>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室公约</a></div>
 	<br>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/zysm.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
@@ -81,21 +80,6 @@
 <div id=3 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是其他区开始-->
 <br>
-<h1 style="text-align: center;color: white;">公告/活动/新闻</h1>
-<div style="text-align: center;"><a style="color: paleturquoise;" href="">更新ing</a></div>
-<br>
-<!--其他区结束-->
-</div>
-<!--上面是div遮罩层结束,id=3-->
-
-<br>
-<br>
-<br>
-
-<!--下面是div遮罩层开始,id=4-->
-<div id=4 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
-<!--下面是其他区开始-->
-<br>
 <h1 style="text-align: center;color: white;">友情链接|感谢名单</h1>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/tha.html">感谢每一位成员的支持</a></div>
 <div style="text-align: center;"><a style="color: yellowgreen;" href="">友情链接:I'm 西杰</a></div>
@@ -113,7 +97,7 @@
 <br>
 <!--其他区结束-->
 </div>
-<!--上面是div遮罩层结束,id=4-->
+<!--上面是div遮罩层结束,id=3-->
 
 
 
@@ -122,9 +106,9 @@
 <br>
 <br>
 
-<!--下面是div遮罩层开始+框架开始,id=6-->
-<div id=6 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
-<!--1开始-->
+<!--下面是div遮罩层开始+框架开始,id=n-->
+<div id=n style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
+<!--x开始-->
 <br>
 <h1 style="text-align: center;color: white;"></h1>
 <div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
@@ -132,9 +116,9 @@
 <div style="text-align: center;"><a style="color: yellowgreen;" ></a></div>
 <div style="text-align: center;"><p style="color: yellowgreen;" ></p></div>
 <br>
-<!--1结束-->
+<!--x结束-->
 </div>
-<!--上面是div遮罩层结束+框架结束,id=6-->
+<!--上面是div遮罩层结束+框架结束,id=n-->
 <!--框架底部-->
 
 
