--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <div id=1 style="background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <!--下面是one区开始-->
 	<br>
+	<div style="text-align: center;color: white;"><p>方舟未来</p></div>
 	<div style="text-align: center;color: white;"><p>ARKFUTURE</p></div>
-	<div style="text-align: center;color: white;"><p><br></p></div>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/ARKFUTURE.pdf">ARKFUTURE方舟未来工作室公约</a></div>
 	<br>
 	<div style="text-align: center;"><a style="color: white;" href="http://arkfuture.cn/ARKFUTURE/zysm.html">ARKFUTURE方舟未来工作室使用资源说明</a></div>
@@ -60,10 +60,9 @@
 	<br>
 	<h1 style="text-align: center;color: white;">其他项目</h1>
 	<div style="text-align: left;color: pink;"><p>游戏战队</p><a style="color: yellowgreen;" href="http://arkfuture.cn/ARKFUTURE/game.html">链接</a></div><br>
-	<div style="text-align: left;color: pink;"><p>方舟未来实验室</p><a style="color: yellowgreen;" href="">链接</a></div><br>
 	<br>
 	<h1 style="text-align: center;color: white;">社交媒体</h1>
-	<div style="text-align: center;color: fuchsia;"><p>可以查找以下名称 :<br>ARKFUTURE<br>ARKFUTURELAB<br>ARKFUTUREGROUP<br>ARKFUTURESTUDIO</p></div><br>
+	<div style="text-align: center;color: fuchsia;"><p>可以查找以下名称 :ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p></div><br>
 	<div style="text-align: center;color: fuchsia;"><p>有中文或英文的特别说明的,均是我们,反而不是</p></div><br>
 
 
@@ -135,8 +134,8 @@
 <footer style="text-align: center;background-color:rgba(23,12,31,0.1);border-radius:30px;">
 <br>
 <br>
-<div><p style="text-align: center;color: white;">ARKFUTURE|ARKFUTURESTUDIO|ARKFUTUREGROUP</p></div>
-<div><p style="text-align: center;color: white;">方舟未来|方舟未来工作室|方舟未来集团</p></div>
+<div><p style="text-align: center;color: white;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p></div>
+<div><p style="text-align: center;color: white;">方舟未来|方舟未来实验室|方舟未来工作室|方舟未来集团</p></div>
 <div><p style="text-align: center;color: white;">2015 - ∞ </p></div>
 <div><p style="text-align: center;color: white;"></p></div>
 <br>
