--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <div style="text-align: center;"><p style="color: yellowgreen;">中国授时中心ntp服务:ntp.ntsc.ac.cn</p></div>
 
 <div style="text-align: center;">
-                <form action="https://www.baidu.com/baidu" target="_blank">
-                    <input type="text" name="word" size="30" autocomplete="off" placeholder="搜索一下,别管搜啥">
+                <form action="https://jx.jsonplayer.com/player/" target="_blank">
+                    <input type="text" name="url" size="30" autocomplete="off" placeholder="搜索一下,别管搜啥">
                     <input type="submit" value="搜索"><i class="iconfont icon-sousuo"></i>
                 </form>
 </div>
