--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -17,7 +17,21 @@
 
     <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
     <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
-        <input type="text" name="s" size="30" autocomplete="off" placeholder="词典">
+        <input type="text" name="s" size="30" autocomplete="off" placeholder="WordNet词典">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
+    <form action="https://www.iciba.com/word" target="_blank">
+        <input type="text" name="w" size="30" autocomplete="off" placeholder="金山词霸">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
+    <form action="https://youdao.com/result target="_blank">
+        <input type="text" name="word" size="30" autocomplete="off" placeholder="有道">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
