--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -38,7 +38,7 @@
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://www.sogou.com/web" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="词典">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="搜狗">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
