--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -8,6 +8,20 @@
 <body>
 <h1>ARKFUTURE快链</h1>
 
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://www.sogou.com/web" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="搜狗">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://kaifa.baidu.com/searchPage" target="_blank">
+        <input type="text" name="wd" size="30" autocomplete="off" placeholder="百度开发者搜索">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
     <p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
     <form action="https://jx.jsonplayer.com/player/" target="_blank">
         <input type="text" name="url" size="30" autocomplete="off" placeholder="视频解析">
@@ -35,12 +49,6 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-
-    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://www.sogou.com/web" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="搜狗">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
 
 </body>
 <!--------------------> 
