--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -6,21 +6,53 @@
 </head>
 <!--------------------> 
 <body>
-<h1>ARKFUTURE快链</h1>
+<h1>ARKFUTURE快链,可以试用id定位到栏目</h1>
+<br>
+<h2 id="1">搜索引擎</h2>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://www.sogou.com/web" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="搜狗">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="搜狗/Sogo">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://kaifa.baidu.com/searchPage" target="_blank">
-        <input type="text" name="wd" size="30" autocomplete="off" placeholder="百度开发者搜索">
+        <input type="text" name="wd" size="30" autocomplete="off" placeholder="百度开发者搜索/Baidu">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://www.google.com/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="谷歌/GOOGLE">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://www.ecosia.org/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="ECOSIA">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://yandex.com/search" target="_blank">
+        <input type="text" name="text" size="30" autocomplete="off" placeholder="俄罗斯搜索/YANDEX">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://duckduckgo.com" target="_blank">
+        <input type="text" name="text" size="30" autocomplete="off" placeholder="鸭鸭/DuckDuckgo">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+ <br>
+ <h2 id="2">视频逃逸</h2>
 
     <p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
     <form action="https://jx.jsonplayer.com/player/" target="_blank">
@@ -28,6 +60,8 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+<br>
+<h2 id="3">英汉词典</h2>
 
     <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
     <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
