--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -6,7 +6,7 @@
 </head>
 <!--------------------> 
 <body>
-<h1>ARKFUTURE快链,可以试用id定位到栏目</h1>
+<h1>ARKFUTURE快链，使用#定位</h1>
 <br>
 <h2 id="1">搜索引擎</h2>
 
