--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -25,6 +25,13 @@
 
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://github.com/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="Github">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://www.google.com/search" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="谷歌/GOOGLE">
         <input type="submit" value="搜索"><i><--点击</i>
