--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -30,7 +30,7 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-
+ 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://www.google.com/search" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="谷歌/GOOGLE">
@@ -54,7 +54,7 @@
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://duckduckgo.com" target="_blank">
-        <input type="text" name="text" size="30" autocomplete="off" placeholder="鸭鸭/DuckDuckgo">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="鸭鸭/DuckDuckgo">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
