--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -2,7 +2,7 @@
 <html>
 <!-------------------->   
 <head>
-<title>ARKFUTURE快链</title>
+<title>快链</title>
 </head>
 <!--------------------> 
 <body>
@@ -92,7 +92,7 @@
 
 
 
-    <!--------------------> 
+    <!-------------js修饰-------> 
 
     <script>
         var OriginTitile = document.title;
