--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -11,8 +11,8 @@
 <h2 id="1">搜索引擎</h2>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://www.sogou.com/web" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="搜狗/Sogo">
+    <form action="https://gogo.webbillion.cn/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="无广搜索(当前使用-勾勾)">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
@@ -92,7 +92,7 @@
 
 
 
-    <!-------------js修饰-------> 
+<!-------------js修饰-------> 
 
     <script>
         var OriginTitile = document.title;
@@ -109,7 +109,13 @@
           }
         });
       </script>
+    
 
 </body>
 <!--------------------> 
+<!-------------页脚-------> 
+<footer>
+    <p style="text-align: center;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
+    <p style="text-align: center;">方舟未来|实验室|工作室|团队/集团</p>
+</footer>
 </html>
