--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -26,7 +26,7 @@
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://github.com/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="Github">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="男性交友网站/Github">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
@@ -40,7 +40,7 @@
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://www.ecosia.org/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="ECOSIA">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="公益搜索/ECOSIA">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
