--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -115,7 +115,7 @@
 <!--------------------> 
 <!-------------页脚-------> 
 <footer>
-    <p style="text-align: center;font-size: 10px;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
-    <p style="text-align: center;font-size: 10px;">方舟未来|实验室|工作室|团队/集团</p>
+    <p style="text-align: center;font-size: 5vw;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
+    <p style="text-align: center;font-size: 5vw;">方舟未来|实验室|工作室|团队/集团</p>
 </footer>
 </html>
