--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -85,7 +85,7 @@
 
 
     <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
-    <form action="https://youdao.com/result target="_blank">
+    <form action="https://youdao.com/result"_blank">
         <input type="text" name="word" size="30" autocomplete="off" placeholder="有道">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
