--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
-<!-------------------->   
+<html> 
 <head>
+<!--------进入加载项----------> 
 <title>快链</title>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.0">
 </head>
 <!--------------------> 
 <body>
@@ -112,7 +114,7 @@
     
 
 </body>
-<!--------------------> 
+
 <!-------------页脚-------> 
 <footer>
     <p style="text-align: center;font-size: 1vw;">ARKFUTURE|ARKFUTURELAB|ARKFUTURESTUDIO|ARKFUTUREGROUP</p>
