--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -60,8 +60,31 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
- <br>
- <h2 id="2">视频逃逸</h2>
+<br>
+<h2 id="2">资产测绘平台(所有的都需要登录)</h2>
+
+<p>使用方法:把链接放到框里，点击搜索按钮即可</p>
+<form action="https://hunter.qianxin.com/list" target="_blank">
+    <input type="text" name="search" size="30" autocomplete="off" placeholder="鹰图">
+    <input type="submit" value="搜索"><i><--点击</i>
+</form>
+
+
+<p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
+<form action="https://quake.360.net/quake/#/searchResult" target="_blank">
+    <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360">
+    <input type="submit" value="搜索"><i><--点击</i>
+</form>
+
+
+<p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
+<form action="https://www.shodan.io/search" target="_blank">
+    <input type="text" name="query" size="30" autocomplete="off" placeholder="SouDan">
+    <input type="submit" value="搜索"><i><--点击</i>
+</form>
+
+<br>
+<h2 id="3">视频逃逸</h2>
 
     <p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
     <form action="https://jx.jsonplayer.com/player/" target="_blank">
@@ -70,7 +93,7 @@
     </form>
 
 <br>
-<h2 id="3">英汉词典</h2>
+<h2 id="4">英汉词典</h2>
 
     <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
     <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
