--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -13,8 +13,8 @@
 <h2 id="1">搜索引擎</h2>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://gogo.webbillion.cn/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="无广搜索(当前使用-勾勾)">
+    <form action="https://fsoufsou.com/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="无广搜索(当前使用-fsofso)">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
@@ -60,26 +60,66 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+    <p>tor搜索</p>
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://ahmia.fi/search/" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="AHMIA">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://thehiddenwiki.org/" target="_blank">
+        <input type="text" name="s" size="30" autocomplete="off" placeholder="THEHIDDENWIKI">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://tor.link/" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="TOR.LINK">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://onionengine.com/search.php" target="_blank">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="ONIONENGINE">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://onionlandsearchengine.net/search" target="_blank">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="ONIONLANDSEARCHENGINE">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
 <br>
 <h2 id="2">资产测绘平台(所有的都需要登录)</h2>
 
-<p>使用方法:把链接放到框里，点击搜索按钮即可</p>
+<p>使用方法:把内容放到框里，点击搜索按钮即可</p>
 <form action="https://hunter.qianxin.com/list" target="_blank">
     <input type="text" name="search" size="30" autocomplete="off" placeholder="鹰图">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
 
 
-<p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
+<p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
 <form action="https://quake.360.net/quake/#/searchResult" target="_blank">
     <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
 
 
-<p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
+<p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
 <form action="https://www.shodan.io/search" target="_blank">
     <input type="text" name="query" size="30" autocomplete="off" placeholder="SouDan">
+    <input type="submit" value="搜索"><i><--点击</i>
+</form>
+
+
+<p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
+<form action="https://www.onyphe.io/search" target="_blank">
+    <input type="text" name="q" size="30" autocomplete="off" placeholder="Onyphe">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
 
