--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -60,7 +60,7 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <p>tor搜索</p>
+<p>tor搜索</p>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://ahmia.fi/search/" target="_blank">
@@ -93,6 +93,28 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+<p>学术/论文搜索</p>
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://www.scirp.org/journal/articles.aspx" target="_blank">
+        <input type="text" name="searchcode" size="30" autocomplete="off" placeholder="Scirp/科研出版社">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://search.scielo.org" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="Scielo/科学在线图书馆">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://arxiv.org/search/" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="Arxiv/预印本平台">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
 <br>
 <h2 id="2">资产测绘平台(所有的都需要登录)</h2>
 
@@ -103,25 +125,25 @@
 </form>
 
 
-<p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
-<form action="https://quake.360.net/quake/#/searchResult" target="_blank">
-    <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360">
-    <input type="submit" value="搜索"><i><--点击</i>
-</form>
+    <p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
+    <form action="https://quake.360.net/quake/#/searchResult" target="_blank">
+        <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
 
 
-<p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
-<form action="https://www.shodan.io/search" target="_blank">
-    <input type="text" name="query" size="30" autocomplete="off" placeholder="SouDan">
-    <input type="submit" value="搜索"><i><--点击</i>
-</form>
+    <p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
+    <form action="https://www.shodan.io/search" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="SouDan">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
 
 
-<p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
-<form action="https://www.onyphe.io/search" target="_blank">
-    <input type="text" name="q" size="30" autocomplete="off" placeholder="Onyphe">
-    <input type="submit" value="搜索"><i><--点击</i>
-</form>
+    <p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
+    <form action="https://www.onyphe.io/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="Onyphe">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
 
 <br>
 <h2 id="3">视频逃逸</h2>
