--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -10,7 +10,7 @@
 <body>
 <h1>ARKFUTURE快链，使用#定位</h1>
 <br>
-<h2 id="1">搜索引擎</h2>
+<h2 id="1">搜索引擎,1</h2>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://fsoufsou.com/search" target="_blank">
@@ -60,7 +60,7 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-<p>tor搜索</p>
+<p id="11">tor搜索,11</p>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://ahmia.fi/search/" target="_blank">
@@ -93,7 +93,7 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-<p>学术/论文搜索</p>
+<p id="12">学术/论文搜索,12</p>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
     <form action="https://www.scirp.org/journal/articles.aspx" target="_blank">
