--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -13,8 +13,8 @@
 <h2 id="1">搜索引擎,1</h2>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://fsoufsou.com/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="无广搜索(当前使用-fsofso)">
+    <form action="https://goobe.io/search.aspx" target="_blank">
+        <input type="text" name="k" size="30" autocomplete="off" placeholder="无广搜索(当前使用-GooBe)">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
@@ -116,7 +116,7 @@
     </form>
 
 <br>
-<h2 id="2">资产测绘平台(所有的都需要登录)</h2>
+<h2 id="2">资产测绘平台(所有的都需要登录),2</h2>
 
 <p>使用方法:把内容放到框里，点击搜索按钮即可</p>
 <form action="https://hunter.qianxin.com/list" target="_blank">
@@ -146,7 +146,7 @@
     </form>
 
 <br>
-<h2 id="3">视频逃逸</h2>
+<h2 id="3">视频逃逸,3</h2>
 
     <p>使用方法:把视频链接放到框里，点击搜索按钮即可</p>
     <form action="https://jx.jsonplayer.com/player/" target="_blank">
@@ -155,7 +155,7 @@
     </form>
 
 <br>
-<h2 id="4">英汉词典</h2>
+<h2 id="4">英汉词典,4</h2>
 
     <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
     <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
