--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -158,13 +158,6 @@
 <h2 id="4">英汉词典,4</h2>
 
     <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
-    <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
-        <input type="text" name="s" size="30" autocomplete="off" placeholder="WordNet词典">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-
-
-    <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
     <form action="https://www.iciba.com/word" target="_blank">
         <input type="text" name="w" size="30" autocomplete="off" placeholder="金山词霸">
         <input type="submit" value="搜索"><i><--点击</i>
@@ -177,6 +170,19 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+
+    <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
+    <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
+        <input type="text" name="s" size="30" autocomplete="off" placeholder="WordNet词典">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+    
+    <p>使用方法:把英文单词放到框里，点击搜索按钮即可</p>
+    <form action="https://www.urbandictionary.com/define.php"_blank">
+        <input type="text" name="term" size="30" autocomplete="off" placeholder="城市英语词典(俚语)">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
 
 
 <!-------------js修饰-------> 
