--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -13,8 +13,8 @@
 <h2 id="1">搜索引擎,1</h2>
 
     <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
-    <form action="https://goobe.io/search.aspx" target="_blank">
-        <input type="text" name="k" size="30" autocomplete="off" placeholder="无广搜索(当前使用-GooBe)">
+    <form action="https://www.baidu.com/s" target="_blank">
+        <input type="text" name="wd" size="30" autocomplete="off" placeholder="搜索(当前使用-Baidu)">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
