--- a/ARKFUTURE/fl.html
+++ b/ARKFUTURE/fl.html
@@ -118,11 +118,19 @@
 <br>
 <h2 id="2">资产测绘平台(所有的都需要登录),2</h2>
 
-<p>使用方法:把内容放到框里，点击搜索按钮即可</p>
-<form action="https://hunter.qianxin.com/list" target="_blank">
-    <input type="text" name="search" size="30" autocomplete="off" placeholder="鹰图">
-    <input type="submit" value="搜索"><i><--点击</i>
-</form>
+
+    <p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+    <form action="https://www.cve.org/CVERecord" target="_blank">
+        <input type="text" name="id" size="30" autocomplete="off" placeholder="通用漏洞披露/CVE">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+    <p>使用方法:把内容放到框里，点击搜索按钮即可</p>
+    <form action="https://hunter.qianxin.com/list" target="_blank">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="鹰图">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
 
 
     <p>使用方法:把内容链接放到框里，点击搜索按钮即可</p>
