--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -4,11 +4,11 @@
 <!--------进入加载项----------> 
 <title>快链</title>
 <meta charset="UTF-8">
-<meta content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <!--------------------> 
 <body>
-<h1>ARKFUTURE快链，使用#定位</h1>
+<center><h1>ARKFUTURE快链，使用#定位</h1></center>
 <br>
 <h2 id="1">搜索引擎,1</h2>
 
