--- a/ARKFUTURE/RES/fl.html
+++ b/ARKFUTURE/RES/fl.html
@@ -4,7 +4,7 @@
 <!--------进入加载项----------> 
 <title>快链</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <!--------------------> 
 <body>
