--- a/index.html
+++ b/index.html
@@ -240,9 +240,8 @@ body {
     overflow-x: hidden;
     justify-content: center;
     /* 背景 */
-    /*background-color: var(--main-bg-color, linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240)));*/
-    background-color: linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240));
-    background-image: url("https://w.wallhaven.cc/full/72/wallhaven-72yzje.jpg");
+    background-color: var(--main-bg-color, linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240)));
+    /*background-image: url("https://w.wallhaven.cc/full/72/wallhaven-72yzje.jpg");*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
