--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@ body {
     justify-content: center;
     /* 背景 */
     background-color: var(--main-bg-color, linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240)));
-    /*background-image: url("https://w.wallhaven.cc/full/72/wallhaven-72yzje.jpg");*/
+    /*background-image: url("https://w.wallhaven.cc/full/72/wallhaven-72yzje.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center center;*/
 }
 .welcome {
     margin: 30px;
