--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <br>
 
-<div class="zww" name="1">
+<div class="zww" id="1">
     <h1>欢迎</h1>
     
     <h2>公约</h2>
@@ -40,7 +40,7 @@
     </p>
 </div>
 <br>
-<div class="zww" name="2">
+<div class="zww" id="2">
     <h1>服务及说明[代理/资源库/日历/IRC等服务]</h1>
 
     <h2>WEB</h2>
@@ -117,7 +117,7 @@
 
 </div>
 <br>
-<div class="zww" name="3">
+<div class="zww" id="3">
     <h1>一些链接</h1>
 
     <p>
@@ -173,7 +173,7 @@
     </p>
 </div>
 <br>
-<div class="zww" name="4">
+<div class="zww" id="4">
     <h1>License/开源软件证书/知识共享开放许可</h1>
 
     <h2>资源使用及版权说明</h2>
@@ -205,7 +205,7 @@
     </center>
 </div>
 <br>
-<div class="zww" name="5">
+<div class="zww" id="5">
     <h1>写在最后</h1>
 
     <h2>我们崇尚黑客精神</h2>
