--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
             您需阅读我们的公约以了解工作室
             “这不是一堆法律术语,但它们是关于什么是允许的指导方针,
             如果你不理解所有的东西也没关系,但是大多数人会理解他们所说的要点”
-            [ARKFUTURE公约](<a
-                href="https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf">https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf</a>)
+            [ARKFUTURE公约](<a href="https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf">https://arkfuture.cn/ARKFUTURE/RES/ARKFUTURE.pdf</a>)
         </p>
         <br>
         <h2>加入我们/联系我们</h2>
         <p>
-            [IRC](<a
-                href="irc://irc.arkfuture.cn:6667/#arkfuture_studio">irc://irc.arkfuture.cn:6667/#arkfuture_studio</a>)
+            [IRC](<a href="irc://irc.arkfuture.cn:6667/#arkfuture_studio">irc://irc.arkfuture.cn:6667/#arkfuture_studio</a>)
             [Telegram](<a href="https://t.me/arkfuture_studio">https://t.me/arkfuture_studio</a>)
             [Matrix](<a href="https://matrix.to/#/#arkfuture:matrix.org">https://matrix.to/#/#arkfuture:matrix.org</a>)
-            [Matrix](<a
-                href="https://matrix.to/#/#arkfuture_studio:matrix.org">https://matrix.to/#/#arkfuture_studio:matrix.org</a>)
+            [Matrix](<a href="https://matrix.to/#/#arkfuture_studio:matrix.org">https://matrix.to/#/#arkfuture_studio:matrix.org</a>)
             [订阅邮件列表](<a herf="mailto:ARKFUTURE@FOXMAIL.COM">mailto:ARKFUTURE@FOXMAIL.COM</a>)
         </p>
         <br>
@@ -64,15 +61,13 @@
         <h2>资源库</h2>
         <p>
             获取我们的内部资源
-            [资源库列表(使用git提交)](<a
-                href="https//arkfuture.cn/ARKFUTURE/RES/rel.csv">https//arkfuture.cn/ARKFUTURE/RES/rel.csv</a>)
+            [资源库列表(使用git提交)](<a href="https//arkfuture.cn/ARKFUTURE/RES/rel.csv">https//arkfuture.cn/ARKFUTURE/RES/rel.csv</a>)
         </p>
 
         <h2>Caldav日历服务及日历</h2>
         <p>
             查看我们近期的计划,或者参与到计划中来
-            [日历文件(使用git提交)](<a
-                href="https://arkfuture.cn/ARKFUTURE/RES/cal.ics">https://arkfuture.cn/ARKFUTURE/RES/cal.ics</a>)
+            [日历文件(使用git提交)](<a href="https://arkfuture.cn/ARKFUTURE/RES/cal.ics">https://arkfuture.cn/ARKFUTURE/RES/cal.ics</a>)
         </p>
 
         <h2>ICECAST2/MPD(电台/音乐服务)</h2>
@@ -82,8 +77,7 @@
 
         <h2>RSS/FEED/ATOM(信息聚合订阅)</h2>
         <p>
-            [电台连接](<a
-                href="https://arkfuture.cn/ARKFUTURE/RES/rss.opml">https://arkfuture.cn/ARKFUTURE/RES/rss.opml</a>)
+            [电台连接](<a href="https://arkfuture.cn/ARKFUTURE/RES/rss.opml">https://arkfuture.cn/ARKFUTURE/RES/rss.opml</a>)
         </p>
 
         <h2>!重要说明!</h2>
