--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <h2>RSS/FEED/ATOM(信息聚合订阅)</h2>
         <p>
-            [电台连接](<a href="https://arkfuture.cn/ARKFUTURE/RES/rss.opml">https://arkfuture.cn/ARKFUTURE/RES/rss.opml</a>)
+            [RSS/FEED/ATOM](<a href="https://arkfuture.cn/ARKFUTURE/RES/rss.opml">https://arkfuture.cn/ARKFUTURE/RES/rss.opml</a>)
         </p>
 
         <h2>!重要说明!</h2>
