--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <br>
 
     <div class="zww" id="1">
-        <h1>欢迎</h1>
+        <h1>欢迎 #1</h1>
+
+        <p style="font-size: 12px;">您可以使用url中的#定位</p>
 
         <h2>公约</h2>
         <p>
@@ -43,7 +45,7 @@
     </div>
     <br>
     <div class="zww" id="2">
-        <h1>服务及说明[代理/资源库/日历/IRC等服务]</h1>
+        <h1>服务及说明[代理/资源库/日历/IRC等服务] #2</h1>
 
         <h2>WEB</h2>
         <p>
@@ -120,7 +122,7 @@
     </div>
     <br>
     <div class="zww" id="3">
-        <h1>一些链接</h1>
+        <h1>一些链接 #3</h1>
 
         <p>
             这个条目是展示一些链接
@@ -176,7 +178,7 @@
     </div>
     <br>
     <div class="zww" id="4">
-        <h1>License/开源软件证书/知识共享开放许可</h1>
+        <h1>License/开源软件证书/知识共享开放许可 #4</h1>
 
         <h2>资源使用及版权说明</h2>
         <p>
@@ -208,7 +210,7 @@
     </div>
     <br>
     <div class="zww" id="5">
-        <h1>写在最后</h1>
+        <h1>写在最后 #5</h1>
 
         <h2>我们崇尚黑客精神</h2>
         <p>
