--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         width: 100%;
         overflow-x: hidden;
         justify-content: center;
-        background: var(--main-bg-color, linear-gradient(50deg, hsl(204, 91%, 86%), rgb(217, 157, 240)));
+        background: var(--main-bg-color, linear-gradient(50deg, #bc95c6, #7dc4cc));
         /*
     background-image: url("");
     background-size: cover;
