--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <h2>WEB</h2>
         <p>
             使用域名时,无端口号
-            使用其他镜像站时,无80端口时使用1314端口
+            使用其他镜像站时,无[80]端口时使用[1314]端口
         </p>
 
         <h2>代理|VPN</h2>
         <p>
-            L2TP/IPSEC服务(VPN),端口:1701
-            socks服务(代理),端口:5554
-            http服务(代理),端口:5555
+            L2TP/IPSEC服务(VPN),端口:[1701]
+            socks服务(代理),端口:[5554]
+            http服务(代理),端口:[5555]
         </p>
 
         <h2>资源库</h2>
@@ -69,11 +69,6 @@
         <p>
             查看我们近期的计划,或者参与到计划中来
             [日历文件(使用git提交)](<a href="https://arkfuture.cn/ARKFUTURE/RES/cal.ics">https://arkfuture.cn/ARKFUTURE/RES/cal.ics</a>)
-        </p>
-
-        <h2>ICECAST2/MPD(电台/音乐服务)</h2>
-        <p>
-            [电台连接](<a href="https://arkfuture.cn:1315/arkfuture.ogg">https://arkfuture.cn:1315/arkfuture.ogg</a>)
         </p>
 
         <h2>RSS/FEED/ATOM(信息聚合订阅)</h2>
@@ -91,8 +86,8 @@
         <h2>IRC[主要服务](因特网中继聊天,使用INSPIRCD搭建)</h2>
         <p>
             默认端口连接不上请 切换端口连接
-            非加密,端口使用6667-6669;其中,6668,6669端口为备用
-            加密,端口使用6697,6679;其中,6679端口为备用
+            非加密,端口使用[6667-6669];其中,[6668],[6669]端口为备用
+            加密,端口使用[6697],[6679];其中,[6679]端口为备用
             [非加密端口链接](<a href="irc://irc.arkfuture.cn:6667/#arkfuture">irc://irc.arkfuture.cn:6667/#arkfuture</a>)
         </p>
 
