--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>ARKFUTURE</title>
     <link rel="icon" href="favicon.ico">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
 <!-------------正文------->
